<resources>
    <!-- Dont Transletable -->
    <string name="home_banner_unit_id" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="archive_banner_unit_id" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="default_photo_size" translatable="false">5</string>
    <string name="banner_size" translatable="false">BANNER</string>
    <string name="app_name">Diary Plus</string>
    <string name="search_from_notes">Search in diaries..</string>
    <string name="home_title">Here are your diaries!</string>
    <string name="nothing_here">Nothing here yet</string>
    <string name="connect_error_message">An error occurred while retrieving data, please try again later.</string>
    <string name="archive_title">Archive</string>
    <string name="calendar_title">Calendar</string>
    <string name="settings_title">Settings</string>
    <string name="profile_name_default">Name</string>
    <string name="account">Account</string>
    <string name="backup">Backup to Cloud</string>
    <string name="backload">Restore from Cloud</string>
    <string name="clear">Clear the Cloud</string>
    <string name="mode">Dark Theme</string>
    <string name="database">Database</string>
    <string name="notifications">Reminder Notification</string>
    <string name="photo">My Photos</string>
    <string name="delete_all_notes">Delete all Diaries</string>
    <string name="archive">Move to Archive</string>
    <string name="restore">Restore from Archive</string>
    <string name="message">Send me Message</string>
    <string name="aboutme">About me</string>
    <string name="rate">Rate this App</string>
    <string name="logout">Log Out</string>
    <string name="invite">Invite Friends</string>
    <string name="exampledate">6  Aug  Mon</string>
    <string name="diaries">Here are your diaries!</string>
    <string name="welcome">Welcome</string>
    <string name="firebase_note_title">Note Title</string>
    <string name="firebase_note_content">Note Content</string>
    <string name="trash_text">Diaries in the Archive 📖</string>
    <string name="auth_login_welcome_text">Welcome Back,Login for Continue !</string>
    <string name="auth_login_email_queryhint">Email address</string>
    <string name="auth_login_password_queryhint">Password</string>
    <string name="auth_login_remember_me_text">Remember me</string>
    <string name="auth_signin_button_text">Sign in</string>
    <string name="auth_forgot_password_text">Forgot password?</string>
    <string name="auth_signin_with_google_button_text">Continue with Google</string>
    <string name="auth_donthave_account">Don\'t have an account?</string>
    <string name="auth_create_here_button_text"><u>Create here</u></string>
    <string name="auth_or_text">or</string>
    <string name="auth_confirm_password_queryhint">Confirm password</string>
    <string name="auth_signup_button_text">Sign up</string>
    <string name="auth_alreadyhave_account">Already have an account?</string>
    <string name="auth_login_here_button_text"><u>Login here</u></string>
    <string name="note_activity_title_new">Add Diary</string>
    <string name="note_activity_title_old">Diary</string>
    <string name="note_save_button_text">Save</string>
    <string name="new_note_title_hint">Title 📌</string>
    <string name="new_note_content_hint">Hey, how you doing? 😉</string>
    <string name="new_note_calendar_text">31 December Wednesday</string>
    <string name="add">+ Add</string>
    <string name="archive_empty">Archive empty</string>
    <string name="enter_email_error_message">Enter your email address</string>
    <string name="enter_email_correct_message">E-mail address could not be found.</string>
    <string name="enter_password_error_message">Enter your password</string>
    <string name="note_title_error_message">Please enter the title of your diary</string>
    <string name="note_content_error_message">Please enter the content of your diary</string>
    <string name="enter_confirm_password_error_message">Confirm your password</string>
    <string name="enter_name_error_message">Please enter your name</string>
    <string name="enter_notify_title_message">Please enter notification title</string>
    <string name="enter_notify_message">Please enter your notification message</string>
    <string name="password_notmatch_error_message">Please make sure your passwords match</string>
    <string name="password_overlimit_error_message">You can\'t create a password with more than 15 characters.</string>
    <string name="signup_failure_message">An error occurred connect to Firebase</string>
    <string name="back">Back</string>
    <string name="send">Send</string>
    <string name="reset_email_info">A reset link has been sent to your email address.</string>
    <string name="reset_password_title">Reset Password</string>
    <string name="read_external_storage_permission">Your permission is required to access the gallery</string>
    <string name="allow">Allow</string>
    <string name="note_photo_title">Photos</string>
    <string name="color_sheet_title">Colors</string>
    <string name="color_name">Color Name</string>
    <string name="white">White</string>
    <string name="purple">Purple</string>
    <string name="pink">Pink</string>
    <string name="blue">Blue</string>
    <string name="dark_blue">Dark Blue</string>
    <string name="orange">Orange</string>
    <string name="red">Red</string>
    <string name="yellow">Yellow</string>
    <string name="green">Green</string>
    <string name="choose_camera_text">Camera</string>
    <string name="choose_gallery_text">Gallery</string>
    <string name="choose_title_text">Choose</string>
    <string name="choose_cancel_text">Cancel</string>
    <string name="note_time_text">23:59</string>
    <string name="change_name_title">Change Name</string>
    <string name="change_name_queryhint">Name</string>
    <string name="change">Update</string>
    <string name="note_photo_piece_text"></string>
    <string name="new_to_old">Date (New -> Old)</string>
    <string name="old_to_new">Date (Old -> New)</string>
    <string name="max_to_min">Photo (Most -> Least)</string>
    <string name="min_to_max">Photo (Least -> Most)</string>
    <string name="archived">1 Archived</string>
    <string name="unarchived">1 Unarchived</string>
    <string name="deleted">1 Deleted</string>
    <string name="saved">1 Saved</string>
    <string name="updated">1 Updated</string>
    <string name="all_deleted">All diaries deleted</string>
    <string name="all_archived">All diaries archived</string>
    <string name="all_noted">All archive restored</string>
    <string name="all_backup">All diaries backed up</string>
    <string name="all_backload">All diaries restored from Cloud</string>
    <string name="all_cleared">Cloud has cleared</string>
    <string name="background_color_changed">Background color changed</string>
    <string name="text_color_changed">Text color changed</string>
    <string name="profile_email_default">abc.def@gmail.com</string>
    <string name="settings_account_title">Account</string>
    <string name="delete_account">Delete Account</string>
    <string name="change_password">Change Password</string>
    <string name="logout_message">Are you sure want to log out?</string>
    <string name="delete_account_message">Are you sure want to delete this account?</string>
    <string name="delete_note_message">Are you sure want to delete all your diaries?</string>
    <string name="archive_note_message">Are you sure want to archive all your diaries?</string>
    <string name="note_archive_message">Are you sure want to unarchive all your diaries?</string>
    <string name="note_backup_message">Are you sure want to backup all your diaries?</string>
    <string name="note_backload_message">Are you sure want to restore from cloud all your diaries?</string>
    <string name="note_clear_message">Are you sure want to clear the cloud?</string>
    <string name="note_cancel_message">Are you sure you want to proceed without saving the diary?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="submit">Submit</string>
    <string name="settings_notifications_title">Reminder Notification</string>
    <string name="notification_title">Title ⏰</string>
    <string name="notification_message">Message 🗨</string>
    <string name="settings_myphotos_title">My Photos</string>
    <string name="settings_database_title">Database</string>
    <string name="language">Language</string>
    <string name="turkish">Turkish</string>
    <string name="english">English</string>
    <string name="menu_save">Save</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_update">Update</string>
    <string name="photo_title">Photo</string>
    <string name="notification_scheduled">Notification Scheduled</string>
    <string name="notification_scheduled_title">Title : </string>
    <string name="notification_scheduled_message">Message : </string>
    <string name="notification_scheduled_time">At : </string>
    <string name="notification_scheduled_ok">Okay</string>
    <string name="diary_default_date">29 December Wednesday</string>
</resources>