<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/reset_password_bottom_sheet"
        android:layout_gravity="bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bottom_sheet_background">

        <ImageView
            android:id="@+id/resetPasswordSwipeIcon"
            style="@style/BottomSheetSwipeStyle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/resetPasswordTitle"
            style="@style/BottomSheetTitleTextStyle"
            android:text="@string/reset_password_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/resetPasswordSwipeIcon" />

        <TextView
            android:id="@+id/resetInfoText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/large_vertical_spacing"
            android:textAlignment="center"
            android:textColor="?attr/colorSecondary"
            android:textSize="@dimen/small_text_size"
            tools:text="@string/reset_email_info"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/resetDivider"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/resetEmailLayout"
            style="@style/TextInputLayoutStyle"
            android:layout_marginStart="@dimen/medium_horizontal_spacing"
            android:layout_marginTop="@dimen/huge_vertical_spacing"
            android:layout_marginEnd="@dimen/medium_horizontal_spacing"
            app:endIconMode="clear_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/resetInfoText"
            app:startIconDrawable="@drawable/auth_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/resetEmailEdittext"
                style="@style/TextInputEditTextStyle"
                android:hint="@string/auth_login_email_queryhint"
                android:inputType="textWebEmailAddress"
               />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/resetSendButton"
            tools:visibility="gone"
            style="@style/smallFillButtonStyle"
            android:layout_marginTop="@dimen/large_vertical_spacing"
            android:layout_marginBottom="@dimen/large_vertical_spacing"
            android:text="@string/send"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/resetEmailLayout"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/resetBackButton"
            style="@style/smallStrokeButtonStyle"
            android:layout_marginTop="@dimen/large_vertical_spacing"
            android:layout_marginBottom="@dimen/large_vertical_spacing"
            android:text="@string/back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/resetEmailLayout"/>

        <View
            android:id="@+id/resetDivider"
            style="@style/BottomSheetDividerStyle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/resetPasswordTitle" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>

