<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_height="wrap_content"
        android:id="@+id/change_name_alert_dialog"
        android:layout_gravity="bottom"
        android:layout_width="match_parent"
        android:background="?attr/colorSurface">

        <TextView
            android:id="@+id/changeNameTitle"
            android:text="@string/change_name_title"
            style="@style/BottomSheetTitleTextStyle"
            android:layout_marginTop="@dimen/small_vertical_spacing"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/changeNameLayout"
            style="@style/TextInputLayoutStyle"
            android:layout_marginStart="@dimen/medium_horizontal_spacing"
            android:layout_marginTop="@dimen/huge_vertical_spacing"
            android:layout_marginEnd="@dimen/medium_horizontal_spacing"
            app:endIconMode="clear_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/changeNameTitle"
            app:shapeAppearanceOverlay="@style/TextInputLayoutShape">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/changeNameEdittext"
                style="@style/TextInputEditTextStyle"
                android:hint="@string/change_name_queryhint"
                android:inputType="textPersonName" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/changeNameButton"
            style="@style/smallFillButtonStyle"
            android:layout_marginTop="@dimen/large_vertical_spacing"
            android:layout_marginBottom="@dimen/large_vertical_spacing"
            android:text="@string/change"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/changeNameLayout" />

        <View
            android:id="@+id/changeDivider"
            style="@style/BottomSheetDividerStyle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/changeNameTitle" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>