<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/auth_background"
        tools:context=".view.fragment.SignupFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/signupInside"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/extra_huge_horizontal_spacing"
            android:layout_marginTop="@dimen/extra_huge_vertical_spacing"
            android:layout_marginEnd="@dimen/extra_huge_horizontal_spacing"
            android:layout_marginBottom="@dimen/large_vertical_spacing"
            android:background="@drawable/auth_inside_box_background"
            app:layout_constraintBottom_toTopOf="@id/singupConstraint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/signupAppLogo"
                android:layout_width="@dimen/huge_image_size"
                android:layout_height="@dimen/huge_image_size"
                android:layout_marginTop="@dimen/extra_huge_vertical_spacing"
                android:src="@drawable/application_logo_without"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/signupEmailLayout"
                style="@style/TextInputLayoutStyle"
                android:layout_marginStart="@dimen/medium_horizontal_spacing"
                android:layout_marginTop="@dimen/extra_huge_vertical_spacing"
                android:layout_marginEnd="@dimen/medium_horizontal_spacing"
                app:endIconMode="clear_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/signupAppLogo"
                app:startIconDrawable="@drawable/auth_email">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/signupEmailEdittext"
                    style="@style/TextInputEditTextStyle"
                    android:hint="@string/auth_login_email_queryhint"
                    android:inputType="textWebEmailAddress"
                     />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/signupPasswordLayout"
                style="@style/TextInputLayoutStyle"
                android:layout_marginStart="@dimen/medium_horizontal_spacing"
                android:layout_marginTop="@dimen/small_vertical_spacing"
                android:layout_marginEnd="@dimen/medium_horizontal_spacing"
                app:counterEnabled="true"
                app:counterMaxLength="15"
                app:boxStrokeErrorColor="?attr/colorError"
                app:endIconMode="password_toggle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/signupEmailLayout"
                app:startIconDrawable="@drawable/auth_lock">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/signupPasswordEdittext"
                    style="@style/TextInputEditTextStyle"
                    android:hint="@string/auth_login_password_queryhint"
                    android:inputType="textPassword"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/signupConfirmPasswordLayout"
                style="@style/TextInputLayoutStyle"
                android:layout_marginStart="@dimen/medium_horizontal_spacing"
                android:layout_marginTop="@dimen/small_vertical_spacing"
                android:layout_marginEnd="@dimen/medium_horizontal_spacing"
                app:boxStrokeErrorColor="?attr/colorError"
                app:counterEnabled="true"
                app:counterMaxLength="15"
                app:endIconMode="password_toggle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/signupPasswordLayout"
                app:startIconDrawable="@drawable/auth_confirm">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/signupConfirmPasswordEdittext"
                    style="@style/TextInputEditTextStyle"
                    android:hint="@string/auth_confirm_password_queryhint"
                    android:inputType="textPassword"
                   />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/signupButton"
                style="@style/mediumButtonStyle"
                android:layout_marginTop="@dimen/extra_huge_vertical_spacing"
                android:layout_marginBottom="@dimen/extra_huge_vertical_spacing"
                android:text="@string/auth_signup_button_text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/signupConfirmPasswordLayout" />

        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/singupConstraint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/extra_huge_vertical_spacing"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/signupInside">

            <TextView
                android:id="@+id/signupAlreadyHaveText"
                style="@style/AuthBottomTextStyle"
                android:text="@string/auth_alreadyhave_account"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/signupLoginHereButton"
                style="@style/AuthBottomTextStyle"
                android:layout_marginStart="@dimen/extra_tiny_horizontal_spacing"
                android:foreground="?android:attr/selectableItemBackground"
                android:text="@string/auth_login_here_button_text"
                app:layout_constraintStart_toEndOf="@id/signupAlreadyHaveText"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
